--- a/front/src/app/views/login/login.component.css
+++ b/front/src/app/views/login/login.component.css
@@ -1,41 +1,42 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(to bottom left, white, #e2e8f0, #16a34a);
-    color: #333;
+:root {
+    --color-violeta: #6564cc;
+    --color-azul: #00339e;
+    --color-azul-oscuro: #010163;
+    --color-naranja: #fc6a07;
+    --color-fondo: #f9f9f9;
+    --color-suave	: #9f9edd;
+    --sombra-suave: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  * {
     margin: 0;
     padding: 0;
-}
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-}
-
-.content {
-    display: flex;
-    background: white;
-    box-shadow: 0 4px 10px var(--color-naranja);
-    border-radius: 10px;
-    overflow: hidden;
+    padding: 24px;
     max-width: 1000px;
-    width: 100%;
+    margin: auto;
+
+
 }
 
-.video {
-    width: 50%;
-    display: block;
-    object-fit: cover;
-}
 
 .form-container {
-    width: 50%;
+    width: 80%;
     padding: 30px;
     background: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border: 1px transparent solid;
+    border-radius: 4px;
 }
 
 .title {
@@ -48,10 +49,11 @@ body {
     margin-bottom: 15px;
 }
 
-.input-group label {
-    display: block;
+.input-group label,p {
+    display: inline-block;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    padding: 8px;
 }
 
 .input-group input {
@@ -81,14 +83,8 @@ body {
 }
 
 .btn {
-    background: var(--color-azul-oscuro);
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    width: 100%;
-    font-weight: bold;
+
+    width: 50%;
 }
 
 .btn:disabled {
@@ -96,13 +92,35 @@ body {
     cursor: not-allowed;
 }
 
-.btn:hover {
-    background: var(--color-azul-oscuro);
-}
+
+button {
+    cursor: pointer;
+    font-weight: bold;
+    background: #fc6a07;
+    color: white;
+    border: none;
+    padding: 8px;
+    margin: 8px;
+    margin-bottom: 16px;
+  
+    width: 100%;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: all .5s; 
+  
+  }
+  
+  button:hover {
+    background: #00339e;
+  
+  }
 
 .links {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 24px;
+    margin-bottom: 36px;
+
 }
 
 .links a {
@@ -116,16 +134,11 @@ body {
     text-decoration: underline;
 }
 
-/* Responsividad */
+/* ///////////  Responsividad //////////// */
 @media (max-width: 600px) {
     .content {
         flex-direction: column;
         max-width: 90%;
-    }
-
-    .video {
-        width: 100%;
-        height: auto;
     }
 
     .form-container {
