change icon my courses

--- a/front/src/app/views/my-courses/my-courses.component.html
+++ b/front/src/app/views/my-courses/my-courses.component.html
@@ -1,7 +1,7 @@
 <body class="card-flex">
   <div *ngFor="let course of courses" class="card-container incubator-theme">
     <a href="/" class="hero-image-container">
-      <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Course Image"/>
+      <img class="hero-image" src="{{ course.img }}" alt="Course Image"/>
     </a>
     <main class="main-content">
       <h1 class="course-title"><a href="#">{{ course.name }}</a></h1>
@@ -9,7 +9,7 @@
 
       <div class="flex-row">
         <div class="course-category">
-          <img src="https://i.postimg.cc/T1F1K0bW/Ethereum.png" alt="category" class="small-image"/>
+          <img src="../../../assets/category-card.png" alt="category" class="small-image" />
           <h2>{{ course.category }}</h2>
         </div>
         <div class="status">
@@ -21,8 +21,8 @@
     </main>
 
     <div class="card-attribute">
-      <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
-      <p>Profesor: <span>{{ course.teacher_id }}</span></p>
+      <img src="../../../assets/teacher-card.png" alt="avatar" class="small-avatar" />
+      <p>Profesor</p>
     </div>
 
     <button class="course-card-button"  (click)="goToCourse(course.course_id)">Ver Curso</button>
