--- a/front/src/app/core/publications/publications.component.css
+++ b/front/src/app/core/publications/publications.component.css
@@ -1,66 +1,73 @@
-/*PALETA DE COLORES*/
+/* PALETA DE COLORES */
 :root {
-  --color-violeta: #6564cc;
+  --color-morado: #1c0c5b;
   --color-azul: #00339e;
-  --color-azul-oscuro: #010163;
   --color-naranja: #fc6a07;
+  --color-naranja-fondo: #ffe2c6;
+  --color-texto: #1a1a1a;
+  --color-blanco: #ffffff;
 }
 
-.borde {
-  border: 1px solid blue;
-}
-
+/* ESTRUCTURA GENERAL */
 section {
-  width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
   justify-content: center;
-  margin: 0.5rem;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 1rem;
 }
 
+/* TARJETA PRINCIPAL */
 .card {
-  margin: 0.5rem 1rem;
-  padding: 1rem;
-  width: 25rem;
-  background-color: var(--color-azul);
+  background-color: var(--color-naranja-fondo);
+  padding: 1.5rem;
+  width: 23rem;
   border-radius: 1rem;
-  box-shadow: 0rem 0rem 1rem var(--color-violeta);
-  transition: all ease .5s;
-
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  text-align: left;
+  position: relative;
 }
 
-.card:hover{
-  box-shadow: 0rem 0rem 1rem var(--color-naranja);
-  transform: translateY(-.2rem);
+/* ESTILOS DEL TÍTULO */
+.title {
+  font-size: 1.2rem;
+  color: var(--color-blanco);
+  font-weight: bold;
+  text-align: left;
+  font-family: "Arial Black", sans-serif;
 }
 
-.card h3,
-h4 {
-  padding: 0.5rem;
-  color: #fff;
-}
-
-
-
+/* RECUADRO CON BORDE IRREGULAR Y ONDULADO */
 .description {
   padding: 1rem;
-  background-color: #fff;
+  border-radius: 10px;
+  position: relative;
+  display: inline-block;
+  max-width: 90%;
+  background-color: rgb(244, 214, 158);
+   /* Borde ondulado */
+  border: 20px solid;
+  border-image-slice: 45.5%; /* Divide la imagen para que se vea en los 4 lados */
+  border-image-repeat: stretch; /* Evita distorsiones */
+  border-image-source: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 10"><path d="M0,5 Q25,10 50,5 T100,5 T150,5 T200,5" fill="none" stroke="orange" stroke-width="4"/></svg>');
+  clip-path: polygon(0% 5%, 97% 3%, 95% 95%, 5% 97%);
 }
 
-.description p {
-  margin: 0.5rem 0;
+/* ESTILOS PARA LA LISTA */
+.description ul {
+  list-style: none;
+  padding: 0;
 }
 
-.type{
-  background-color: var(--color-violeta);
+.description li {
+  font-size: 1.2rem;
+  color: var(--color-texto);
+  margin-bottom: 0.5rem;
 }
-.date{
-  text-align: end;
-}
-/* RESPONSIVE*/
+
+/* RESPONSIVE */
 @media (max-width: 600px) {
-  .card{
-    width: 15rem;
+  .card {
+    width: 18rem;
   }
 }
