--- a/front/src/app/core/footer/footer.component.html
+++ b/front/src/app/core/footer/footer.component.html
@@ -1,53 +1,55 @@
 <footer>
-  <div class="footer-container">
-      <section class="footer-info">
-          <h3>Sobre Nosotros</h3>
-          <p>Somos Incubadora del NOC, ayudamos a emprendedores a convertir sus ideas en negocios exitosos.</p>
-      </section>
+    <div class="footer-container">
+        <section class="footer-info">
+            <h3>Sobre Nosotros</h3>
+            <p>Somos Incubadora del NOC, ayudamos a emprendedores a convertir sus ideas en negocios exitosos.</p>
+        </section>
 
-      <section class="footer-links">
-          <h3>Enlaces Útiles</h3>
-          <ul>
-              <li><a href="/courses">Cursos</a></li>
-              <li><a href="/about-us">Sobre Nosotros</a></li>
-              <li><a href="/contact">Contacto</a></li>
-              <li><a href="/faq">Preguntas Frecuentes</a></li>
-              
-          </ul>
-      </section>
+        <section class="footer-links">
+            <h3>Enlaces Útiles</h3>
+            <ul>
+                <li><a href="/courses">Cursos</a></li>
+                <li><a href="/about-us">Sobre Nosotros</a></li>
+                <li><a href="/contact">Contacto</a></li>
+                <li><a href="/faq">Preguntas Frecuentes</a></li>
 
-      <section class="footer-contact">
-          <h3>Contacto</h3>
-          <p>Email: incubadoradelnoc&#64;gmail.com<a href="mailto:incubadoradelnoc@gmail.com"></a></p>
-          <p>Teléfono: <a href="tel:+5493549636800">+54 3549636800</a></p>
-          <p>📍Nos encontramos en Mitre 757</p>
-      </section>
+            </ul>
+        </section>
 
-      <section class="footer-social">
-          <h3>Síguenos</h3>
-          <a href="https://www.facebook.com/profile.php?id=100063640024874" target="_blank">Facebook</a> |
-          <a href="https://www.instagram.com/incubadoradelnoc/?hl=es-la" target="_blank">Instagram</a> 
-      </section>
+        <section class="footer-contact">
+            <h3>Contacto</h3>
+            <p>Email: incubadoradelnoc&#64;gmail.com<a href="mailto:incubadoradelnoc@gmail.com"></a></p>
+            <p>Teléfono: <a href="tel:+5493549636800">+54 3549636800</a></p>
+            <p>📍Nos encontramos en Mitre 757</p>
+        </section>
 
-      <section class="footer-legal">
-          <h3>Información Legal</h3>
-          <ul>
-              <li><a href="/terms">Términos y Condiciones</a></li>
-              <li><a href="/policies">Política de Privacidad</a></li>
-              <li><a href="/cookie-policies">Política de Cookies</a></li>
-          </ul>
-      </section>
+        <section class="footer-social">
+            <h3>Síguenos</h3>
+            <a href="https://www.facebook.com/profile.php?id=100063640024874" target="_blank">Facebook</a> |
+            <a href="https://www.instagram.com/incubadoradelnoc/?hl=es-la" target="_blank">Instagram</a>
+        </section>
 
-      <section class="footer-newsletter">
-          <h3>Suscríbete a nuestro boletín</h3>
-          <form action="/suscribirse" method="post">
-              <input type="email" placeholder="Tu correo electrónico" required>
-              <button type="submit">Suscribirme</button>
-          </form>
-      </section>
-  </div>
+        <section class="footer-legal">
+            <h3>Información Legal</h3>
+            <ul>
+                <li><a href="/terms">Términos y Condiciones</a></li>
+                <li><a href="/policies">Política de Privacidad</a></li>
+                <li><a href="/cookie-policies">Política de Cookies</a></li>
+            </ul>
+        </section>
 
-  <div class="footer-bottom">
-      <p>&copy; 2025 Incubadora del NOC. Todos los derechos reservados.</p>
-  </div>
+        <section class="footer-newsletter">
+            <h3>Suscríbete a nuestro boletín</h3>
+            <form action="/suscribirse" method="post">
+                <input type="email" placeholder="Tu correo electrónico" required>
+                <button type="submit">Suscribirme</button>
+            </form>
+        </section>
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; {{ currentDay }}/{{ currentMonth }}/{{ currentYear }} {{ formattedHour }}:{{
+            formattedMinute }}:{{
+            formattedSeconds }} Incubadora del NOC. Todos los derechos reservados.</p>
+    </div>
 </footer>
