--- a/front/src/app/views/my-courses/my-courses.component.css
+++ b/front/src/app/views/my-courses/my-courses.component.css
@@ -125,8 +125,8 @@ Classes
   margin-bottom: 1rem;
   padding: 2rem;
   box-shadow: 0 0 10px var(--var-line-dark);
-  border-bottom: 2px solid #000;
-  border-top: 2px solid #000;
+  border-bottom: 2px solid rgba(252, 106, 7, 0.7);
+  border-top: 2px solid rgba(252, 106, 7, 0.7);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
