--- a/front/src/app/views/my-enrollments/my-enrollments.component.css
+++ b/front/src/app/views/my-enrollments/my-enrollments.component.css
@@ -80,7 +80,7 @@ h2 {
   /* 📌 Sección de Cursos Registrados */
 .courses-title {
   font-size: 2.5rem;
-  color: #010163;
+  color: white;
   text-align: center;
   margin-bottom: 20px;
   font-weight: bold;
