--- a/front/src/app/views/my-courses/my-courses.component.html
+++ b/front/src/app/views/my-courses/my-courses.component.html
@@ -1,30 +1,39 @@
-<body class="card-flex">
-  <div *ngFor="let course of courses" class="card-container incubator-theme">
-    <a href="/" class="hero-image-container">
-      <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Course Image"/>
-    </a>
-    <main class="main-content">
-      <h1 class="course-title"><a href="#">{{ course.name }}</a></h1>
-      <p class="course-description">{{ course.description }}</p>
-
-      <div class="flex-row">
-        <div class="course-category">
-          <img src="https://i.postimg.cc/T1F1K0bW/Ethereum.png" alt="category" class="small-image"/>
-          <h2>{{ course.category }}</h2>
-        </div>
-        <div class="status">
-          <img src="https://i.postimg.cc/prpyV4mH/clock-selection-no-bg.png" alt="clock" class="small-image"/>
-          <p *ngIf="course.active; else inactive" class="active-status">Activo</p>
-          <ng-template #inactive><p class="inactive-status">Inactivo</p></ng-template>
-        </div>
-      </div>
-    </main>
-
-    <div class="card-attribute">
-      <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
-      <p>Profesor: <span>{{ course.teacher_id }}</span></p>
-    </div>
-
-    <button class="course-card-button"  (click)="goToCourse(course.course_id)">Ver Curso</button>
+<section class="contenedor">
+  <div class="cont-tit">
+    <h2 class="title">Cursos que dicto</h2>
   </div>
-</body>
+
+  <div>
+    <h2 class="title-not">Por el momento no hay cursos que dictar</h2>
+  </div>
+  <div class="courses-container">
+
+    <div *ngFor="let course of courses" class="card-container incubator-theme">
+      <div class="hero-image-container">
+        <img *ngIf="course.img == null"   class="hero-image" [src]="course.img" alt="Course Image"/>
+        <img *ngIf="course.img != null"  class="hero-image" [src]="imageUrl" alt="Course Image"/>
+      </div>
+  
+      <main class="main-content">
+        <h1 class="course-title">{{ course.name }}</h1>
+        <p class="course-description">{{ course.description }}</p>
+  
+        <div class="flex-row">
+          <div class="course-category">
+          <img src="../../../assets/category-card.png" alt="category" class="small-image" />
+            
+            <h2>{{ course.category }}</h2>
+          </div>
+          <div class="status">
+          <img src="https://i.postimg.cc/prpyV4mH/clock-selection-no-bg.png" alt="clock" class="small-image" />
+            <p *ngIf="course.active; else inactive" class="active-status">Activo</p>
+            <ng-template #inactive><p class="inactive-status">Inactivo</p></ng-template>
+          </div>
+        </div>
+      </main>
+  
+  
+      <button class="course-card-button"  (click)="goToCourse(course.course_id)">Ver Curso</button>
+    </div>
+  </div>
+</section>
