--- a/front/src/app/views/home/home.component.css
+++ b/front/src/app/views/home/home.component.css
@@ -207,7 +207,7 @@ a {
 
 .carousel-container {
   position: relative;
-  width: 100%;
+  width: 80%;
   max-height: 850px;
   max-width: 95%;
   margin: auto;
@@ -286,11 +286,21 @@ a {
 }
 .notices {
   padding: 20px;
+  margin: 24px 0;
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-top: 1px solid #ffffff50;
 }
+.notices h1{
+  font-size: 2.5rem;
+  margin: 24px;
+}
+.white{
+  color: white;
+}
+
 
 /* 🔹 Responsividad */
 
