--- a/front/src/app/views/my-courses/my-courses.component.css
+++ b/front/src/app/views/my-courses/my-courses.component.css
@@ -51,10 +51,36 @@ html {
 *::after {
   box-sizing: inherit;
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-  background-color: var(--var-main-darkest);
+.contenedor {
+  max-width: 1200px;
+  margin: 30px auto;
+  border-radius: 12px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border: 2px solid var(--color-azul); /* Borde completo */
+  border-left: 5px solid var(--color-azul);
+  background-color: #f9f9f9;
+
+}
+
+.cont-tit{
+  background-color: #6564cc;
+  padding: 16px;
+  border-radius:8px 8px 0px 0px;
+  border: 1px solid #6564cc;
+  text-align: center;
+  color: white;
+}
+.no-register{
+  text-align: center;
+  margin: 48px 0;
+  display: block;
+}
+.no-register h2{
+  color: #00339E;
+  display: block;
 }
 
 img {
@@ -79,10 +105,7 @@ h1 {
   padding: 1.2em 0;
 }
 
-h2 {
-  font: var(--var-small-heading);
-  color: var(--var-lightest);
-}
+
 
 p {
   font: var(--var-para);
@@ -118,7 +141,6 @@ Classes
 .card-container {
   width: 100%;
   max-width: 400px;
-  height: 600px;
   margin: 2em auto;
   background-color: var(--var-card-dark);
   border-radius: 15px;
@@ -129,7 +151,7 @@ Classes
   border-top: 2px solid rgba(252, 106, 7, 0.7);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
 
 }
 
@@ -277,6 +299,9 @@ div.attribution {
   border-radius: 10px;
   transition: transform 0.3s ease;
 }
+.img{
+  height: 16rem;
+}
 
 .hero-image:hover {
   transform: scale(1.05);
@@ -313,7 +338,8 @@ div.attribution {
 .course-category {
   display: flex;
   align-items: center;
-  gap: 8px;
+  margin: 16px;
+
 }
 
 .course-category h2 {
@@ -366,9 +392,10 @@ div.attribution {
   border-radius: 8px;
   color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 10px 20px;
+
   cursor: pointer;
-  
+  transition: all .5s;
 }
 
 .course-card-button:hover{
