--- a/front/src/app/views/my-enrollments/my-enrollments.component.css
+++ b/front/src/app/views/my-enrollments/my-enrollments.component.css
@@ -12,6 +12,15 @@
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.no-register{
+  text-align: center;
+  margin: 48px 0;
+}
+.no-register h2{
+  color: #00339E;
+}
+
 /* Estilos generales */
 
 .contenedor {
