--- a/front/src/app/views/createUserRole/create-user-role.component.html
+++ b/front/src/app/views/createUserRole/create-user-role.component.html
@@ -65,12 +65,12 @@
                 <p>{{c.description}}</p>
                 <p>{{c.course_id}}</p>
 
-                <button type="submit" (click)="addTeacherToCourse(c.course_id)">Asignar curso al docente</button>
+                <button class="button-create" type="submit" (click)="addTeacherToCourse(c.course_id)">Asignar curso al docente</button>
 
 
             </div>
         </div>
-        <button type="submit" (click)="cancelar()">Cancelar</button>
+        <button class="button-create" type="submit" (click)="cancelar()">Cancelar</button>
         
   
 
