--- a/front/src/app/views/createUserRole/create-user-role.component.css
+++ b/front/src/app/views/createUserRole/create-user-role.component.css
@@ -78,6 +78,23 @@ form {
     margin-top: 15px;
 }
 
+.button-create{
+    text-align: center;
+    margin-top: 15px;
+    background: linear-gradient(135deg, #6564cc, #00339e);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.button-create:hover{
+    background: #fc6a07;
+    transform: scale(1.05);
+}
 .button button {
     background: linear-gradient(135deg, #6564cc, #00339e);
     color: white;
